# distributed-verification-vi

./: .gitignore  README.md  pyproject.toml
src/vi_verifier/: __init__.py  cli.py  eval_cases.py  graph_ops.py  paper_compat.py  proof_reproduction.py  types.py  verifier.py
tests/: test_proof_reproduction.py  test_verifier.py
