[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-verification-vi"
version = "0.1.0"
description = "Minimal viable reference implementation for distributed verification predicates."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = [
  "distributed-algorithms",
  "graph-theory",
  "verification",
  "rustworkx",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "rustworkx>=0.17,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<10",
  "ruff>=0.5",
]

[project.scripts]
vi-verify = "vi_verifier.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/distributed-verification-vi"
Issues = "https://github.com/your-org/distributed-verification-vi/issues"
Source = "https://github.com/your-org/distributed-verification-vi"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vi_verifier = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
